fix for wordwrapping of long genre names.

--- a/HTML/EN/plugins/JustCovers/html/css/justcovers.css
+++ b/HTML/EN/plugins/JustCovers/html/css/justcovers.css
@@ -6,6 +6,7 @@
     border-style:solid;
     border-width:4px;
     border-color:#404040;
+    word-wrap:break-word;
 }
 
 .jcGenreImg {
